Added save email preferences functionality

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1807,6 +1807,9 @@ footer {
   margin: 0;
 }
 
+@include mdc-switch-knob-color($mdc-theme-primary);
+@include mdc-switch-track-color($mdc-theme-primary-dark);
+
 @media screen and (max-width: $mobile-breakpoint) {
   .mdc-toolbar-fixed-adjust {
     padding-top: $header-upper-height;
