--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -270,6 +270,7 @@ footer h3,
 .mdc-typography--headline6,
 .mdc-typography--headline7,
 .mdc-card__supporting-text,
+.mdc-select__native-control,
 .mdc-typography--subheading2,
 .mdc-list-item__secondary-text,
 .mdc-simple-menu .mdc-list-item,
