--- a/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
@@ -1,8 +1,14 @@
 {{> vacancy_search_form this instance_id="perm"}}
 
 <div id="detailed-results-container" class="container-content goodmoves-saved-searches">
+  <div class="pull-right">
+    <a class="mdc-button" href="/settings">
+      <span class="far fa-cog" aria-hidden="true"></span>
+      Email summary settings
+    </a>
+  </div>
   <h1 class="mdc-typography--headline3 v-margin-full">
-    Saved searches
+    Searches &amp;
   </h1>
 
   <ul class="mdc-list mdc-list--two-line mdc-list--avatar-list mdc-elevation--z3">
@@ -17,7 +23,7 @@
           </div>
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone saved-search-email-switch">
             <span class="mdc-list-item__text">
-              <strong>Send by email</strong>
+              <strong>Add to summary email</strong>
             </span>
           </div>
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone saved-search-email-switch">
