--- a/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
@@ -2,13 +2,13 @@
 
 <div id="detailed-results-container" class="container-content goodmoves-saved-searches">
   <div class="pull-right">
-    <a class="mdc-button" href="/settings">
+    <a class="mdc-button mdc-button--raised v-margin-full" href="/settings">
       <span class="far fa-cog" aria-hidden="true"></span>
       Email summary settings
     </a>
   </div>
   <h1 class="mdc-typography--headline3 v-margin-full">
-    Searches &amp;
+    Searches
   </h1>
 
   <ul class="mdc-list mdc-list--two-line mdc-list--avatar-list mdc-elevation--z3">
@@ -72,9 +72,7 @@
     {{/each}}
   </ul>
 
-  <hr />
-
-  <h2 class="mdc-typography--headline4 v-margin">
+  <!-- <h2 class="mdc-typography--headline4 v-margin">
     Email alert preferences
   </h2>
   <p class="mdc-typography--body1">
@@ -87,7 +85,7 @@
     </h3>
     {{#each (split "monday,tuesday,wednesday,thursday,friday,saturday,sunday" ",")}}
       <div class="mdc-switch">
-        <input type="checkbox" id="email-switch-{{this}}" class="mdc-switch__native-control" role="switch" 
+        <input type="checkbox" id="email-switch-{{this}}" class="mdc-switch__native-control" role="switch"
           {{~#if (contains @root.data.email_days this)~}}checked="checked"{{/if}} name="{{this}}" onchange="$('#email-preferences-submit').prop('disabled', false);">
         <div class="mdc-switch__background">
           <div class="mdc-switch__knob"></div>
@@ -97,6 +95,6 @@
         {{capitalize this}}
       </label>
     {{/each}}
-    <button class="mdc-button mdc-button--raised mdc-ripple-surface mdc-ripple-surface--primary" type="submit" id="email-preferences-submit" data-mdc-auto-init="MDCRipple" disabled>Update preferences</button>
+    <button class="mdc-button mdc-button--raised mdc-ripple-surface mdc-ripple-surface--primary" type="submit" id="email-preferences-submit" data-mdc-auto-init="MDCRipple" disabled>Update preferences</button> -->
   </form>
 </div>
