--- a/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
@@ -3,12 +3,12 @@
 <div id="detailed-results-container" class="container-content goodmoves-saved-searches">
   <div class="pull-right">
     <a class="mdc-button mdc-button--raised v-margin-full" href="/settings">
-      <span class="far fa-cog" aria-hidden="true"></span>
-      Email summary settings
+      <span class="far fa-cog mdc-list-item__graphic" aria-hidden="true"></span>
+      Email settings
     </a>
   </div>
   <h1 class="mdc-typography--headline3 v-margin-full">
-    Searches
+    Searches &amp; email preferences
   </h1>
 
   <ul class="mdc-list mdc-list--two-line mdc-list--avatar-list mdc-elevation--z3">
@@ -23,7 +23,7 @@
           </div>
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone saved-search-email-switch">
             <span class="mdc-list-item__text">
-              <strong>Add to summary email</strong>
+              <strong>Add to email</strong>
             </span>
           </div>
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone saved-search-email-switch">
