Saved search button change

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -330,6 +330,9 @@ footer h3,
 .mdc-button {
   transition: 0.1s;
 }
+.mdc-button--large {
+  height: 56px;
+}
 .mdc-drawer--temporary .mdc-drawer__header::before {
   padding-top: $header-upper-height;
 }
@@ -398,6 +401,7 @@ footer h3,
 .goodmoves-vacancy-search {
   .head {
     margin-bottom: $unit/2;
+    .mdc-button.saved-search,
     .mdc-text-field,
     .mdc-select {
       margin-top: $unit/2;
@@ -437,6 +441,13 @@ footer h3,
       margin: 0 auto;
       height: 40px;
     }
+  }
+}
+
+#google_translate_element {
+  margin-top: $unit/4;
+  .goog-te-menu-value:hover {
+    text-decoration: none;
   }
 }
 
