--- a/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
@@ -18,6 +18,63 @@
           )
         ) ">" -1
       }}
+      <button class="mdc-button mdc-button--large saved-search">
+        <span class="far fa-cog mdc-list-item__graphic" aria-hidden="true"></span>
+        Search: {{getProperty
+          (itemAt
+            @root.data.saved_searches.items
+            (indexOf
+              (map @root.data.saved_searches.items (getProp 'querystring'))
+              (querystringify (obj)
+                keywords=@root.request.params.query.keywords
+                salary_min=@root.request.params.query.salary_min
+                salary_max=@root.request.params.query.salary_max
+                roles=@root.request.params.query.roles
+                sectors=@root.request.params.query.sectors
+                statuses=@root.request.params.query.statuses
+              )
+            )
+          ) 'name'
+        }}
+        <div class="mdc-switch">
+          <input type="checkbox" id="email-switch-0" class="mdc-switch__native-control" role="switch" checked="checked">
+          <div class="mdc-switch__background">
+            <div class="mdc-switch__knob"></div>
+          </div>
+        </div>
+        <label for="email-switch-0">
+          <span class="far fa-envelope fa-2x"></span>
+        </label>
+      </button>
+      {{else}}
+      <button class="mdc-button mdc-button--raised mdc-button--large saved-search">
+        <span class="far fa-save mdc-list-item__graphic" aria-hidden="true"></span>
+        Save/email this search
+      </button>
+      <!-- <form class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone" action="/save-search{{{@root.request.url.search}}}" method="POST">
+        <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-trailing-icon" data-mdc-auto-init="MDCTextField">
+          <input type="text" id="saved-search-name" name="name" class="mdc-text-field__input">
+          <label for="saved-search-name" class="mdc-floating-label mdc-floating-label--float-above">Save search</label>
+          <button class="mdc-icon-button mdc-text-field__icon" tabindex="0" role="role">
+            <span class="far fa-save" aria-hidden="true"></span>
+          </button>
+          <div class="mdc-line-ripple"></div>
+        </div>
+      </form> -->
+      {{/compare}}
+      <!-- {{#compare
+        (indexOf
+          (map @root.data.saved_searches.items (getProp 'querystring'))
+          (querystringify (obj)
+            keywords=@root.request.params.query.keywords
+            salary_min=@root.request.params.query.salary_min
+            salary_max=@root.request.params.query.salary_max
+            roles=@root.request.params.query.roles
+            sectors=@root.request.params.query.sectors
+            statuses=@root.request.params.query.statuses
+          )
+        ) ">" -1
+      }}
       <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-trailing-icon noselect" data-mdc-auto-init="MDCTextField">
         <input type="text" id="saved-search-name" name="name" class="mdc-text-field__input noselect" disabled="disabled"
         value="{{getProperty
@@ -53,7 +110,7 @@
           <div class="mdc-line-ripple"></div>
         </div>
       </form>
-      {{/compare}}
+      {{/compare}} -->
     </div>
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
       {{> pagination paging=data.search_data.detailed_results.pagination}}
