--- a/sites/configurations/goodmoves/partials/vacancy-search-form.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-form.hbs
@@ -125,7 +125,7 @@
       {{/each}}
 
       <h3 class="mdc-drawer__content-heading">
-        Work type
+        Working pattern
         <span class="mdc-icon-toggle pull-right" data-collapse-target="#{{instance_id}}-statuses-collapse"
               role="button" aria-pressed="false"
               aria-label="Show roles" tabindex="0">
