--- a/sites/configurations/goodmoves/partials/vacancy/full.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/full.hbs
@@ -159,10 +159,10 @@
           <div class="container-content container-map">
             <div id="map-full" data-map-options='{
               "center": {
-                "lat": 57.1795139,
-                "lng": -5.5317967
+                "lat": {{geo_vacancy_coords.0.lat}},
+                "lng": {{geo_vacancy_coords.0.lon}}
               },
-              "zoom": 6,
+              "zoom": 12,
               "styles": [
                 {
                   "featureType": "administrative.country",
