--- a/sites/configurations/goodmoves/templates/vacancies/shortlist.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/shortlist.hbs
@@ -5,12 +5,12 @@
     Shortlist
   </h1>
 
-  <h2 class="mdc-typography--headline4 v-margin-full">
-    Current vacancies
-  </h3>
-  {{#each data.search_data.detailed_results.hits.hits ~}}
+  <p class="mdc-typography--body1">
+    TBC
+  </p>
+  <!-- {{#each data.search_data.detailed_results.hits.hits ~}}
   {{> vacancy_search_result _source}}
-  {{/each ~}}
+  {{/each ~}} -->
 
   <div class="foot">
     {{> pagination paging=data.search_data.detailed_results.pagination}}
