--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -411,13 +411,15 @@ footer h3,
     }
     .mdc-button.saved-search {
       color: $mdc-theme-secondary-dark;
-      cursor: default;
       label {
         margin: 0 $unit;
         .far {
           color: $mdc-theme-primary-light;
         }
       }
+    }
+    .mdc-button.saved-search:hover {
+      cursor: default;
     }
     .pagination {
       margin-top: $unit*1.25;
