--- a/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
@@ -52,7 +52,7 @@
         ) ">" -1
       }}
       <button class="mdc-button mdc-button--large saved-search">
-        <span class="far fa-cog mdc-list-item__graphic" aria-hidden="true"></span>
+        <span class="far fa-search-plus mdc-list-item__graphic" aria-hidden="true"></span>
         <div class="mdc-switch">
           <input type="checkbox" id="email-switch-0" class="mdc-switch__native-control" role="switch" checked="checked">
           <div class="mdc-switch__background">
@@ -60,7 +60,7 @@
           </div>
         </div>
         <label for="email-switch-0">
-          <span class="far fa-fw fa-envelope fa-2x"></span>
+          <span class="far fa-envelope fa-2x"></span>
         </label>
         {{getProperty
           (itemAt
@@ -80,10 +80,13 @@
         }}
       </button>
       {{else}}
+      <!-- <form action="/save-search{{{@root.request.url.search}}}" method="POST"> -->
       <button class="mdc-button mdc-button--raised mdc-button--large save-search" id="save-search-button">
         <span class="far fa-search-plus mdc-list-item__graphic" aria-hidden="true"></span>
         Save/email this search
       </button>
+      <!-- </form> -->
+      {{/compare ~}}
       <!-- <form class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone" action="/save-search{{{@root.request.url.search}}}" method="POST">
         <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-trailing-icon" data-mdc-auto-init="MDCTextField">
           <input type="text" id="saved-search-name" name="name" class="mdc-text-field__input">
@@ -94,7 +97,6 @@
           <div class="mdc-line-ripple"></div>
         </div>
       </form> -->
-      {{/compare}}
       <!-- {{#compare
         (indexOf
           (map @root.data.saved_searches.items (getProp 'querystring'))
