--- a/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
@@ -151,20 +151,29 @@
       {{> pagination paging=data.search_data.detailed_results.pagination}}
     </div>
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-      <div class="mdc-select mdc-select--box pull-right" data-mdc-auto-init="MDCSelect">
-        <select class="mdc-select__native-control" id="sort" name="sort">
-          <option value="undefined">Relevance</option>
-          <option value="distance-asc">Distance</option>
-          <option value="closing_date-asc">Closing soon</option>
-          <option value="start_at-desc">Newest</option>
-          <option value="start_at-asc">Oldest</option>
-          <option value="salary_min-desc">Salary - high to low</option>
-          <option value="salary_min-asc">Salary - low to high</option>
-        </select>
-        <label class="mdc-floating-label mdc-floating-label--float-above" for="sort">
-          Sort
-        </label>
-      </div>
+      <form action="{{{request.url.path}}}" method="GET">
+        <input type="hidden" name="keywords" value="{{request.params.query.keywords}}" />
+        <input type="hidden" name="location" value="{{request.params.query.location}}" />
+        <input type="hidden" name="distance" value="{{request.params.query.distance}}" />
+        <input type="hidden" name="lat" value="{{request.params.query.lat}}" />
+        <input type="hidden" name="lng" value="{{request.params.query.lng}}" />
+        <input type="hidden" name="salary_min" value="{{request.params.query.salary_min}}" />
+        <input type="hidden" name="salary_max" value="{{request.params.query.salary_max}}" />
+        <div class="mdc-select mdc-select--box pull-right" data-mdc-auto-init="MDCSelect">
+          <select class="mdc-select__native-control" id="sort" name="sort" onchange="this.form.submit();">
+            <option value=""{{#compare request.params.query.sort "===" ""}} selected{{/compare}}>Relevance</option>
+            <option value="distance"{{#compare request.params.query.sort "===" "distance"}} selected{{/compare}}{{#compare request.params.query.location "===" ""}} disabled{{/compare}}>Distance</option>
+            <option value="closing_soon"{{#compare request.params.query.sort "===" "closing_soon"}} selected{{/compare}}>Closing soon</option>
+            <option value="newest"{{#compare request.params.query.sort "===" "newest"}} selected{{/compare}}>Newest</option>
+            <option value="oldest"{{#compare request.params.query.sort "===" "oldest"}} selected{{/compare}}>Oldest</option>
+            <option value="salary_high"{{#compare request.params.query.sort "===" "salary_high"}} selected{{/compare}}>Salary - high to low</option>
+            <option value="salary_low"{{#compare request.params.query.sort "===" "salary_low"}} selected{{/compare}}>Salary - low to high</option>
+          </select>
+          <label class="mdc-floating-label mdc-floating-label--float-above" for="sort">
+            Sort
+          </label>
+        </div>
+      </form>
     </div>
   </div>
 </div>
