--- a/sites/configurations/goodmoves/partials/terms-maps.hbs
+++ b/sites/configurations/goodmoves/partials/terms-maps.hbs
@@ -1,16 +1,31 @@
 {
-  "roles": {
-    "slugToTerm": {
-      
-    },
-    "termToSlug": {
-
-    },
-    "slugsWithCounts": [
-
-    ],
-    "termsWithCounts": [
-
-    ]
-  }
+  {{#each (split "roles,sectors,statuses" ",")}}
+    "{{this}}": {
+      "slugsMap": {
+        {{#each (getProperty @root.data.supplimentaryResponses.types.aggregations (concat this ".buckets")) ~}}
+          "{{slugify key}}": {
+            "term": {{{stringify key}}},
+            "count": {{doc_count}}
+          }{{#unless @last}},{{/unless}}
+        {{/each}}
+      },
+      "termsMap": {
+        {{#each (getProperty @root.data.supplimentaryResponses.types.aggregations (concat this ".buckets")) ~}}
+          {{{stringify key}}}: { 
+            "slug": "{{slugify key}}",
+            "count": {{doc_count}}
+          }{{#unless @last}},{{/unless}}
+        {{/each}}
+      },
+      "all": [
+        {{#each (getProperty @root.data.supplimentaryResponses.types.aggregations (concat this ".buckets")) ~}}
+          { 
+            "term": "{{key}}",
+            "slug": "{{slugify key}}",
+            "count": {{doc_count}}
+          }{{#unless @last}},{{/unless}}
+        {{/each}}
+      ]
+    }{{#unless @last}},{{/unless}}
+  {{/each}}
 }
