Wording updates and minor styling

--- a/sites/configurations/goodmoves/templates/account/settings.hbs
+++ b/sites/configurations/goodmoves/templates/account/settings.hbs
@@ -6,10 +6,10 @@
   </h1>
 
   <h2 class="mdc-typography--headline4 v-margin">
-    Email alert preferences
+    Email alerts
   </h2>
   <p class="mdc-typography--body1">
-    You have _ saved search for your email alerts.
+    You have 1 saved search for your email alerts.
   </p>
 
   <form action="/update-email-preferences" method="POST" class="v-margin-full">
@@ -34,7 +34,7 @@
   <hr />
 
   <h2 class="mdc-typography--headline4 v-margin">
-    Change password
+    Password
   </h2>
   <p class="mdc-typography--body1">
     TBC
@@ -43,9 +43,12 @@
   <hr />
 
   <h2 class="mdc-typography--headline4 v-margin">
-    Delete account
+    Account
   </h2>
   <p class="mdc-typography--body1">
-    TBC
+    <button class="mdc-button mdc-button--raised">
+      <span class="far fa-trash mdc-list-item__graphic" aria-hidden="true"></span>
+      Delete my account
+    </button>
   </p>
 </div>
