--- a/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
@@ -2,13 +2,13 @@
 
 <div id="detailed-results-container" class="container-content goodmoves-saved-searches">
   <div class="pull-right">
-    <a class="mdc-button mdc-button--raised v-margin-full" href="/settings">
+    <a href="/settings" class="mdc-button mdc-button--raised v-margin-full">
       <span class="far fa-cog mdc-list-item__graphic" aria-hidden="true"></span>
-      Email settings
+      Email alert settings
     </a>
   </div>
   <h1 class="mdc-typography--headline3 v-margin-full">
-    Searches &amp; email preferences
+    Searches
   </h1>
 
   <ul class="mdc-list mdc-list--two-line mdc-list--avatar-list mdc-elevation--z3">
