--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -863,6 +863,14 @@ a {
         margin-top: $unit;
         margin-right: $unit;
       }
+      .mdc-typography--body1 {
+        u {
+          text-decoration: none;
+        }
+        a {
+          margin-left: $unit/4;
+        }
+      }
     }
     .location-info {
       .container-map {
