Can now toggle email subscriptions in Saved search pagew

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -444,6 +444,9 @@ footer h3,
       .far {
         color: $mdc-theme-primary-light;
       }
+      .icon-toggle-off {
+        color: #999999;
+      }
     }
     .saved-search-email-switch {
       label {
