--- a/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
@@ -75,18 +75,12 @@
                 </div>
               </span>
             </div>
-            <form action="/toggle-subscription" method="POST" class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone saved-search-email-switch">
-              <input type="hidden" name="name" value="{{name}}">
-              <button type="submit" class="saved-search-remove mdc-icon-button" data-mdc-auto-init="MDCRipple" title="{{#if subscribed}}Remove search from{{else}}Add search to{{/if}} my email summary">
-                <span class="far fa-envelope {{#unless subscribed}}icon-toggle-off {{/unless}}" aria-hidden="true"></span>
-              </button>
-            </form>
-            <form action="/delete-search" method="POST" class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone">
-              <input type="hidden" name="name" value="{{name}}">
-              <button type="submit" class="saved-search-remove mdc-icon-button" data-mdc-auto-init="MDCRipple">
-                <span class="far fa-trash-alt" aria-hidden="true"></span>
-              </button>
-            </form>
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone saved-search-email-switch">
+              {{> subscription_toggle name=name subscribed=subscribed}}
+            </div>
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone">
+              {{> delete_search name=name}}
+            </div>
           </div>
         </div>
       </li>
