Updated toggle button styles

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -449,12 +449,6 @@ footer h3,
       display: flex;
       justify-content: center;
       align-items: center;
-      .far {
-        color: $mdc-theme-primary-light;
-      }
-      .icon-toggle-off {
-        color: #999999;
-      }
     }
     .saved-search-email-switch {
       label {
@@ -466,6 +460,13 @@ footer h3,
       height: 40px;
     }
   }
+}
+
+.icon-toggle-off {
+  color: #999999;
+}
+.icon-toggle-on {
+  color: $mdc-theme-primary-light;
 }
 
 #google_translate_element {
