--- a/sites/configurations/goodmoves/partials/delete-search.hbs
+++ b/sites/configurations/goodmoves/partials/delete-search.hbs
@@ -1,4 +1,4 @@
-<form action="/delete-search" method="POST">
+<form action="/delete-search" method="POST" class="{{formClasses}}">
   <input type="hidden" name="name" value="{{name}}">
   <button type="submit" class="saved-search-remove mdc-icon-button" data-mdc-auto-init="MDCRipple">
     <span class="far fa-trash-alt" aria-hidden="true"></span>
