--- a/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
@@ -74,55 +74,29 @@
 <div class="mdc-layout-grid head">
   <div class="mdc-layout-grid__inner">
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-      {{#compare
-        (indexOf
-          (map @root.data.saved_searches.items (getProp 'querystring'))
-          (querystringify (obj)
-            keywords=@root.request.params.query.keywords
-            salary_min=@root.request.params.query.salary_min
-            salary_max=@root.request.params.query.salary_max
-            roles=@root.request.params.query.roles
-            sectors=@root.request.params.query.sectors
-            statuses=@root.request.params.query.statuses
-          )
-        ) ">" -1
-      }}
-      <button class="mdc-button mdc-button--large saved-search">
-        <span class="far fa-search-plus mdc-list-item__graphic" aria-hidden="true"></span>
-        <div class="mdc-switch">
-          <input type="checkbox" id="email-switch-0" class="mdc-switch__native-control" role="switch" checked="checked">
-          <div class="mdc-switch__background">
-            <div class="mdc-switch__knob"></div>
-          </div>
-        </div>
-        <label for="email-switch-0">
-          <span class="far fa-envelope fa-2x"></span>
-        </label>
-        {{getProperty
-          (itemAt
-            @root.data.saved_searches.items
-            (indexOf
-              (map @root.data.saved_searches.items (getProp 'querystring'))
-              (querystringify (obj)
-                keywords=@root.request.params.query.keywords
-                salary_min=@root.request.params.query.salary_min
-                salary_max=@root.request.params.query.salary_max
-                roles=@root.request.params.query.roles
-                sectors=@root.request.params.query.sectors
-                statuses=@root.request.params.query.statuses
-              )
+      {{#with (itemAt
+          @root.data.saved_searches.items
+          (indexOf
+            (map @root.data.saved_searches.items (getProp 'querystring'))
+            (querystringify (obj)
+              keywords=@root.request.params.query.keywords
+              salary_min=@root.request.params.query.salary_min
+              salary_max=@root.request.params.query.salary_max
+              roles=@root.request.params.query.roles
+              sectors=@root.request.params.query.sectors
+              statuses=@root.request.params.query.statuses
             )
-          ) 'name'
-        }}
-      </button>
+          )
+          )}}
+        <span class="mdc-typography--headline5">{{name}}</span>
+        {{> subscription_toggle name=name subscribed=subscribed}}
+        {{> delete_search name=name}}
       {{else}}
-      <!-- <form action="/save-search{{{@root.request.url.search}}}" method="POST"> -->
-      <button class="mdc-button mdc-button--raised mdc-button--large save-search" id="save-search-button" data-dialog-target="#save-search-dialog">
-        <span class="far fa-search-plus mdc-list-item__graphic" aria-hidden="true"></span>
-        Save/email this search
-      </button>
-      <!-- </form> -->
-      {{/compare ~}}
+        <button class="mdc-button mdc-button--raised mdc-button--large save-search" id="save-search-button" data-dialog-target="#save-search-dialog">
+          <span class="far fa-search-plus mdc-list-item__graphic" aria-hidden="true"></span>
+          Save/email this search
+        </button>
+      {{/with}}
       <!-- <form class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone" action="/save-search{{{@root.request.url.search}}}" method="POST">
         <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-trailing-icon" data-mdc-auto-init="MDCTextField">
           <input type="text" id="saved-search-name" name="name" class="mdc-text-field__input">
