Fixed current search/saved search check

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1893,6 +1893,10 @@ footer.mdc-layout__footer {
 @include mdc-switch-knob-color($mdc-theme-primary);
 @include mdc-switch-track-color($mdc-theme-primary);
 
+form.inline-form {
+  display: inline-block;
+}
+
 @media screen and (max-width: $mobile-breakpoint) {
   .mdc-toolbar-fixed-adjust {
     padding-top: $header-upper-height;
