--- a/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
@@ -83,28 +83,28 @@
 <div class="mdc-layout-grid head">
   <div class="mdc-layout-grid__inner">
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-      {{#with (itemAt
-          @root.data.saved_searches.items
-          (indexOf
-            (map @root.data.saved_searches.items (getProp 'querystring'))
-            (querystringify (obj)
+      {{#with (querystringify (obj)
               keywords=@root.request.params.query.keywords
               salary_min=@root.request.params.query.salary_min
               salary_max=@root.request.params.query.salary_max
               roles=@root.request.params.query.roles
               sectors=@root.request.params.query.sectors
               statuses=@root.request.params.query.statuses
-            )
-          )
-          )}}
-        <span class="mdc-typography--headline5">{{name}}</span>
-        {{> subscription_toggle name=name subscribed=subscribed}}
-        {{> delete_search name=name}}
-      {{else}}
-        <button class="mdc-button mdc-button--raised mdc-button--large save-search" id="save-search-button" data-dialog-target="#save-search-dialog">
-          <span class="far fa-search-plus mdc-list-item__graphic" aria-hidden="true"></span>
-          Save/email this search
-        </button>
+              distance=@root.request.params.query.distance
+              lat=@root.request.params.query.lat
+              lng=@root.request.params.query.lng
+              location=@root.request.params.query.location
+            )}}
+        {{#with (itemAt @root.data.saved_searches.items (indexOf (map @root.data.saved_searches.items (getProp 'querystring')) this))}}
+          <span class="mdc-typography--headline5">{{name}}</span>
+          {{> subscription_toggle name=name subscribed=subscribed formClasses="inline-form"}}
+          {{> delete_search name=name formClasses="inline-form"}}
+        {{else}}
+          <button class="mdc-button mdc-button--raised mdc-button--large save-search" id="save-search-button" data-dialog-target="#save-search-dialog">
+            <span class="far fa-search-plus mdc-list-item__graphic" aria-hidden="true"></span>
+            Save/email this search
+          </button>
+        {{/with}}
       {{/with}}
       <!-- <form class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone" action="/save-search{{{@root.request.url.search}}}" method="POST">
         <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-trailing-icon" data-mdc-auto-init="MDCTextField">
